feat: improve performance on large images via rayon

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ image = { version = "0.25.2", default-features = false, features = ["png", "jpeg
 kmeans_colors = { version = "0.6.0", default-features = false, features = ["palette_color"]}
 log = "0.4.22"
 palette = { version = "0.7.6", default-features = false, features = ["std"] }
+rayon = "1.10.0"
